# superalign

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  README_BIO.md  SECURITY.md  demo_config.json  example_data.fasta  pyproject.toml  verify_distributed_matrix.py  verify_matrix.py  verify_plugins.py  verify_system.py  verify_system_v2.py  workstation.duckdb
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs-validation.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/wasm-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/wasm-ui/src/: App.tsx  index.css  store.ts
apps/wasm-ui/src/wasm/: package.json  wasm_core.d.ts  wasm_core.js  wasm_core_bg.wasm  wasm_core_bg.wasm.d.ts
crates/core-parser/: Cargo.toml
crates/core-parser/src/: lib.rs
crates/export-engine/: Cargo.toml
crates/export-engine/src/: lib.rs
crates/matrix-engine/: Cargo.toml
crates/matrix-engine/src/: determinism_tests.rs  lib.rs
crates/plugin-runtime/: Cargo.toml
crates/plugin-runtime/src/: lib.rs
crates/provenance-core/: Cargo.toml
crates/provenance-core/src/: lib.rs
crates/qc-engine/: Cargo.toml
crates/qc-engine/src/: lib.rs
crates/schemas/: Cargo.toml
crates/schemas/src/: contracts.rs  invariants.rs  lib.rs  sample_data.rs
crates/taxonomy-engine/: Cargo.toml
crates/taxonomy-engine/src/: lib.rs  property_tests.rs
crates/wasm-core/: Cargo.toml
crates/wasm-core/src/: lib.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GOVERNANCE.md  INSTALL.md  TESTING_STRATEGY.md  WASM_ARCHITECTURE.md
infrastructure/database/: schema.sql
python/superalign/: __init__.py  cli.py  server.py
python/superalign-core/: Cargo.toml
python/superalign-core/src/: lib.rs
schemas/: README.md
scripts/: validate_docs.py
tests/: scientific_hard_verify.py  scientific_national_lab.py  test_orchestration.py  validate_scientific_integrity.py
tests/generators/: bio_data.py
