[workspace]
resolver = "2"
members = [
    "apps/cli",
    "crates/core-parser",
    "crates/taxonomy-engine",
    "crates/provenance-core",
    "crates/matrix-engine",
    "crates/schemas",
    "crates/plugin-runtime",
    "crates/wasm-core",
    "python/superalign-core", # The PyO3 binding crate
]

[workspace.package]
version = "0.1.0"
authors = ["SuperAlign Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/superalign/superalign"

[workspace.dependencies]
# Shared dependencies for version consistency across crates
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
arrow = { version = "53.0" }
parquet = { version = "53.0" }
zarr = { version = "0.1" } # Placeholder or actual crate
duckdb = { version = "0.10" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
wasm-bindgen = "0.2"
superalign-schemas = { path = "crates/schemas" }
