[package]
name = "core-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "core_parser"
path = "src/lib.rs"

[dependencies]
needletail = "0.6"
arrow = { version = "53.0" }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
superalign-schemas = { path = "../schemas" }
flate2 = "1.0"
rayon = "1.10"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"
