[package]
name = "export-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "export_engine"
path = "src/lib.rs"

[dependencies]
zarrs = { version = "0.17", features = ["ndarray", "filesystem"] }
anyhow = "1.0"
superalign-schemas = { path = "../schemas" }
arrow = { version = "53.0" }
