[package]
name = "matrix-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "matrix_engine"
path = "src/lib.rs"

[dependencies]
zarrs = { version = "0.17", features = ["ndarray", "filesystem"] }
arrow = { version = "53.0" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
superalign-schemas = { path = "../schemas" }
tracing = "0.1"
rayon = "1.10"
ndarray = "0.15"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
