[package]
name = "plugin-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "plugin_runtime"
path = "src/lib.rs"

[dependencies]
arrow = { version = "53.0" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
superalign-schemas = { path = "../schemas" }
provenance-core = { path = "../provenance-core" }
tracing = "0.1"
libloading = "0.8"
