[package]
name = "provenance-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "provenance_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
arrow = { version = "53.0" }
parquet = { version = "53.0", features = ["arrow"] }
superalign-schemas = { path = "../schemas" }
anyhow = "1.0"
tracing = "0.1"
