[package]
name = "superalign-schemas"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "superalign_schemas"
path = "src/lib.rs"

[dependencies]
arrow = { version = "53.0", features = ["prettyprint"] }
parquet = { version = "53.0", features = ["arrow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
lazy_static = "1.4"
anyhow = "1.0"
