[package]
name = "taxonomy-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "taxonomy_engine"
path = "src/lib.rs"

[dependencies]
duckdb = { version = "1.1", features = ["bundled"] }
arrow = { version = "53.0" }
anyhow = "1.0"
strsim = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
superalign-schemas = { path = "../schemas" }
tracing = "0.1"
rayon = "1.10"

[dev-dependencies]
proptest = "1.4"
