[package]
name = "wasm-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "File", "Blob", "ReadableStream"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
needletail = "0.6"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["wasmbind"] }
superalign-schemas = { path = "../schemas" }
arrow = { version = "53.0", default-features = false }
anyhow = "1.0"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
sha2 = "0.10"
hex = "0.4"
